--- a/taskQueueGrupo3/appsettings.json
+++ b/taskQueueGrupo3/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "TaskQueueGrupo3DBConnection": "Server=DESKTOP-9DARKCC;Database=TaskQueueGrupo3DB;Trusted_Connection=True;"
+    "TaskQueueGrupo3DBConnection": "Server=PC;Database=TaskQueueGrupo3DB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
