Se agrega el proceso para poder ejecutar las tareas pendientes, y las fallidas reprocesarla, ademas se configura un envio de correos por SMTP.

--- a/taskQueueGrupo3/appsettings.json
+++ b/taskQueueGrupo3/appsettings.json
@@ -2,11 +2,25 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Trace"
+      }
     }
   },
   "ConnectionStrings": {
-    "TaskQueueGrupo3DBConnection": "Server=PC;Database=TaskQueueGrupo3DB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "TaskQueueGrupo3DBConnection": "Server=DESKTOP-9DARKCC;Database=TaskQueueGrupo3DB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "Task Queue System",
+    "SenderEmail": "taskqueue05@gmail.com",
+    "Username": "taskqueue05@gmail.com",
+    "Password": "usbp cdjy bvsr shid"
+  }
 }
